# finality-gadget

./: .gitignore  .golangci.yml  Dockerfile  LICENSE  Makefile  README.md  config.toml  config.toml.example  go.mod  go.sum
.circleci/: config.yml
.github/: pull_request_template.md
bbnclient/: bbnclient.go  interface.go  query_internal.go
btcclient/: btcclient.go  btcclient_test.go  client.go  client_test.go  config.go  interface.go
client/: rpcclient.go
cmd/: main.go  start.go
config/: config.go
cw-da-contract-stub/: Cargo.toml  Makefile
cw-da-contract-stub/schema/: babylon-da-sdk-stub.json
cw-da-contract-stub/schema/raw/: query.json  response_to_config.json
cw-da-contract-stub/src/: contract.rs  lib.rs  msg.rs
cwclient/: cwclient.go  interface.go  query_internal.go
db/: bbolt.go  bbolt_test.go  interface.go  models.go  pg.go  pg_test.go  query.go
demo/: main.go
ethl2client/: ethl2client.go  interface.go
finalitygadget/: README.md  errors.go  expected_clients.go  finalitygadget.go  finalitygadget_test.go  interface.go  query.go  utils.go
indexer/: DESIGN.md  events.go  events_test.go  indexer.go  tx.go
log/: log.go
proto/: finalitygadget.pb.go  finalitygadget.proto  finalitygadget_grpc.pb.go
sdk/: btc.go  btc_test.go  client.go  errors.go  sdk.go  sdk_test.go  wasm.go
server/: grpcserver.go  http.go  httpserver.go  rpcserver.go  server.go
testutil/: mock_btc_client.go  random.go
testutils/: mock_btc_client.go  random.go
types/: babylon.go  block.go  db.go  errors.go  external_clients.go  finalitygadget.go  indexer.go  query.go  (+1 more)
(+56 files in other folders)
